# COL781-Graphics-A1

./: README.md  Report.odt  a.out  main  readme_gramphic-1  starter_code.cpp
a1-master/: .~lock.Report.odt#  CMakeLists.txt  SoftwareRasterization.cpp
a1-master/examples/: e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  my_scene.cpp  new.cpp
a1-master/src/: hw.cpp  hw.hpp  sw.cpp  sw.hpp
